--- a/Reggie.Blog/Views/Shared/Error.cshtml
+++ b/Reggie.Blog/Views/Shared/Error.cshtml
@@ -1,6 +1,7 @@
-﻿@model ErrorViewModel
+﻿@model Reggie.Blog.ViewModels.ErrorViewModel
 @{
     ViewData["Title"] = "Error";
+    Layout="_EmptyLayout";
 }
 
 <h1 class="text-danger">Error.</h1>
