--- a/Reggie.Blog/Views/Home/Index.cshtml
+++ b/Reggie.Blog/Views/Home/Index.cshtml
@@ -261,19 +261,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Langdexuming's Reggie.Blog</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">@ViewData["Title"]</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li id="liIndex">
                         <a asp-controller="Home" asp-action="Index">首页</a>
                     </li>
-                    <li id="liGameLife">
+                    <!-- <li id="liGameLife">
                         <a asp-controller="Home" asp-action="GameLife">游戏人生</a>
                     </li>
                     <li id="liLeaveMessage">
                         <a asp-controller="Home" asp-action="LeaveMessage">给我留言</a>
-                    </li>
+                    </li> -->
                     <li id="liResume">
                         <a asp-controller="Home" asp-action="Resume">个人简历</a>
                     </li>
