--- a/Reggie.Blog/Views/Shared/_ManageLayout.cshtml
+++ b/Reggie.Blog/Views/Shared/_ManageLayout.cshtml
@@ -30,14 +30,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                    <a asp-area="" asp-controller="" asp-action="Index" class="navbar-brand">Langdexuming's Blog</a>
+                    <a asp-area="" asp-controller="Home" asp-action="Manage" class="navbar-brand">Langdexuming's Blog</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li id="liIndex"><a asp-controller="Home" asp-action="Index">首页</a></li>
-                        <!-- <li id="liGameLife"><a asp-controller="Home" asp-action="GameLife">游戏人生</a></li>
-                        <li id="liLeaveMessage"><a asp-controller="Home" asp-action="LeaveMessage">给我留言</a></li> -->
-                        <li id="liResume"><a asp-controller="Home" asp-action="Resume">个人简历</a></li>
+                        <li id="liIndex"><a asp-controller="Home" asp-action="Manage">首页</a></li>
+                        <li id="liGameLife"><a asp-controller="GameLife" asp-action="Index">游戏人生</a></li>
+                        <li id="liLeaveMessage"><a asp-controller="LeaveMessage" asp-action="Index">给我留言</a></li>
+                        <li id="liResume"><a asp-controller="Resume" asp-action="Index">个人简历</a></li>
                     </ul>
                 </div>
             </div>
