--- a/Reggie.Blog/Views/Shared/_Layout.cshtml
+++ b/Reggie.Blog/Views/Shared/_Layout.cshtml
@@ -9,7 +9,10 @@
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
-            <link rel="stylesheet" href="~/css/animate.css">
+        <link rel="stylesheet" href="~/css/animate.css">
+        <link href="~/css/font-awesome.css?v=4.4.0" rel="stylesheet">
+        <link rel="stylesheet" href="~/css/plugins/summernote/summernote.css" />
+        <link rel="stylesheet" href="~/css/plugins/summernote/summernote-bs3.css" />
 
     </environment>
     <environment names="Staging,Production">
@@ -17,7 +20,11 @@
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
-            <link rel="stylesheet" href="~/css/animate.min.css" asp-append-version="true">
+        <link rel="stylesheet" href="~/css/animate.min.css" asp-append-version="true">
+        <link href="~/css/font-awesome.min.css?v=4.4.0" rel="stylesheet" asp-append-version="true">
+        <link rel="stylesheet" href="~/css/plugins/summernote/summernote.min.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/css/plugins/summernote/summernote-bs3.min.css" asp-append-version="true" />
+
     </environment>
 </head>
 <body>
@@ -54,6 +61,8 @@
         <script src="~/js/site.js" asp-append-version="true"></script>
         <!-- <script src="~/js/holder.js"></script> -->
         <script src="~/lib/chart/dist/Chart.js"></script>
+        <script src="~/js/plugins/summernote/summernote.js"></script>
+        <script src="~/js/plugins/summernote/summernote-zh-CN.js"></script>
     </environment>
     <environment names="Staging,Production">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
@@ -71,6 +80,8 @@
         <script src="~/js/site.min.js" asp-append-version="true"></script>
         <!-- <script src="~/js/holder.min.js" asp-append-version="true"></script> -->
         <script src="~/lib/chart/dist/Chart.min.js" asp-append-version="true"></script>
+        <script src="~/js/plugins/summernote/summernote.min.js" asp-append-version="true"></script>
+        <script src="~/js/plugins/summernote/summernote-zh-CN.js" asp-append-version="true"></script>
     </environment>
 
     @RenderSection("Scripts", required: false)
